Fixed box vertical align

--- a/less/on-campus.less
+++ b/less/on-campus.less
@@ -41,6 +41,7 @@
   .tile {
     background-color: #ECE9E2;
     overflow: hidden;
+    vertical-align: top;
     .category {
         color: @lightgold;
         font-size: 16px;        
