--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -223,7 +223,6 @@
         font-family: @font-family-headline;
         a {
           font-weight: 500;
-          color:@purple;
           text-transform: uppercase;
           font-weight:700;
           padding-right: 20px;
